<resources>
    <string name="app_name">Fudge</string>
    <string name="title_shoppinglist">Einkaufsliste</string>
    <string name="title_inventorylist">Inventarliste</string>
    <string name="title_addproducts">Produkte hinzufügen</string>
    <string name="title_recipes">Rezeptvorschläge</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="search">Suche</string>
    <string name="content_description_favorite_recipe">Content Description Favorite Recipe</string>
    <string name="content_description_search">Content Description Search</string>
    <string name="content_description_more">Content Description More</string>
    <string name="favorite_recipe">Lieblingsrezepte</string>
    <string name="user_profile">Profil</string>
    <string name="content_description_user_profile">Content Description User Profile</string>
    <string name="title_shopping">Einkauf</string>
    <string name="title_inventory">Inventar</string>
    <string name="title_recipe">Rezepte</string>
    <string name="search_hint">Bitte gib ein Suchwort ein.</string>
    <string name="login_activity_title">Login</string>
    <string name="content_description_app_icon">App Icon</string>
    <string name="tobuyproductstitle">Zu kaufende Produkte</string>
    <string name="lastboughtproductstitle">Zuletzt gekaufte Produkte</string>
    <string name="edittext_addnewproducttitle">Neues Produkt</string>
    <string name="edittext_addnewproductquantity">Menge</string>
    <string name="button_addProduct">Produkt hinzufügen</string>
    <string name="addnewproducttoshoppinglistlabel">Was möchtest Du einkaufen?</string>
    <string name="AddButtonShoppinglist">Create new Product</string>
    <string name="add_product_to_shoppinglist">Hinzufügen</string>
    <string name="numberonerecipelisttitle"># Rezepte heute</string>
    <string name="expiring_product_list_title">Ablaufende Produkte</string>
    <string name="dashboard_show_more">Weitere</string>
    <string name="dashboard_greeting_user">Hi,</string>
    <string name="dashboard_user_name">James</string>
    <string name="dashboard_favorite_recipes">Beliebteste Rezepte</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Dies ist keine valide Email.</string>
    <string name="invalid_password">Das Passwort sollte >5 Charakter enthalten.</string>
    <string name="invalid_passwords">Passwörter stimmen nicht überein</string>
    <string name="login_failed">"Der Login ist fehlgeschlagen."</string>
    <string name="register_failed">"Die Registrierung ist fehlgeschlagen."</string>
    <string name="register">Registrierung</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password_hint">******</string>
    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="logout">Logout</string>
    <string name="dummy_text_email">max.mustermann@test.com</string>
    <string name="dummy_text_lastname">Mustermann</string>
    <string name="dummy_text_firstname">Max</string>
    <string name="expires_in">Läuft ab in:</string>
    <string name="expiration_dummy_value">3 Days</string>
    <string name="expiration_dummy_product_name">Tiefkühlpasta</string>
    <string name="add_new_product_to_inventory">Neues Produkt zum Inventar hinzufügen</string>
    <string name="add_new_inventory">Produkt hinzufügen</string>
    <string name="edit_products">Produkt Bearbeiten</string>
    <string name="button_edit_product">Produkt bearbeiten</string>
    <string name="content_description_edit_product">Produkt bearbeiten</string>
    <string name="scan_product_code">Produktbarcode einscannen</string>
    <string name="add_new_product">Erstelle ein neues Produkt</string>
    <string name="expiration_date">Ablaufdatum</string>
    <string name="hint_hersteller">Hersteller</string>
    <string name="product_name">Produktname</string>
    <string name="product_type">Produkttyp</string>
    <string name="button_inventory_list_edit_product">Produkt bearbeiten</string>
    <string name="inventory_list_add_new_product">Erstelle ein neues Produkt</string>
    <string name="inventory_list_product_expiration_date">Ablaufdatum</string>
    <string name="inventory_list_product_name">Produktname</string>
    <string name="inventory_list_product_type">Produkttyp</string>
    <string name="add_product_image_text">Möchtest du ein Produktbild hinzufügen?</string>
    <string name="dietry_tag_label">Label</string>
    <string name="edit_text_error_productname_not_empty">Der Produktname darf nicht leer sein!</string>
    <string name="edit_text_error_product_quantity_not_empty">Die Produktanzahl darf nicht leer sein!</string>
    <string name="button_add_image_to_product">Produktbild hinzufügen</string>
    <string name="vegan_pizza">Vegane Pizza</string>
    <string name="_1_piece">1 Stück</string>
    <string name="vegan">Vegan</string>
    <string name="buddha_bowl">Buddha Bowl</string>
    <string name="inventory_product_rating_amount">4.5</string>
    <string name="dropDownProductTypeText">Bitte wähle einen Produkttyp aus der Dropdownlist aus.</string>
    <string name="choose_producttype">Wähle Produkttyp</string>
    <string name="amount">Menge</string>
    <string name="nutritionvalues">Nährwerte</string>
    <string name="show_more_items">Weitere anzeigen</string>
    <string name="create_new_product">Neues Produkt erstellen</string>
    <string name="pizza">Pizza</string>
    <string name="_3">3</string>
    <string name="food_dummy_image">Platzhalter Bild</string>
    <string name="show_more">Weitere</string>
    <string name="exp_date">22.02.2022</string>
    <string name="expires_soon">expires soon</string>
    <string name="button_add_new_product">Neues Produkt zum Inventar hinzufügen</string>
    <string name="recipe_filter">Meine Rezeptfilter</string>
    <string name="profile_settings">Profil Einstellungen</string>
    <string name="allow_pushNotifications">Pushbenachrichtigungen erlauben</string>
    <string name="e_mail_title">Mail:</string>
    <string name="password">Passwort</string>
    <string name="password_string">*******</string>
    <string name="edit_profile">Profil Bearbeiten</string>
    <string name="add_food_preferences_to_user_profile">Füge neue Ernährungspräferenzen hinzu</string>
    <string name="user_profile_allow_push_not">Pushbenachrichtigungen erlauben</string>
    <string name="user_profile_edit">Profil Bearbeiten</string>
    <string name="user_profile_first_name">Vorname</string>
    <string name="user_profile_sir_name">Nachname</string>
    <string name="notificationTitle">Ablaufende Produkte im Inventar</string>
    <string name="notificationText">Du hast ablaufende Produkte im Inventar!</string>
    <string name="recipe_detail_image">Rezept Detailbild</string>
    <string name="recipe_detail_information">Rezept Informationen</string>
    <string name="recipe_detail_rating">Bewertung</string>
    <string name="recipe_ingredient_text">Frischer Bienenhonig</string>
    <string name="recipe_ingredient_amount">5 Teelöffel</string>
    <string name="recipe_ingredient_available">vorhanden</string>
    <string name="button_share_ingredients">Zutaten zu Einkaufsliste hinzufügen</string>
    <string name="add_to_shoppinglist_title">Möchtest Du fehlende Zutaten deiner Einkaufsliste hinzufügen?</string>
    <string name="Available">vorhanden</string>
    <string name="NotAvailable">nicht vorhanden</string>
    <string name="simpel">einfach</string>
    <string name="export_ingredients_to_shoppinglist">Fehlende Zutaten in Einkaufsliste hinzufügen</string>
    <string name="export_ingredients">Zutaten Exportieren</string>
    <string name="best_voted_recipes">Beliebteste Rezepte</string>
    <string name="cooking_instructions">Kochanleitung</string>
    <string name="example_sentence">The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog.</string>
    <string name="needed_ingredients_title">Benötigte Zutaten</string>
    <string name="example_description">Vegetarisch</string>
    <string name="rate_recipe">Bewertung</string>
    <string name="rating_value">4.5</string>
    <string name="dummy_text">5.0</string>
    <string name="dummy_text_min">30 Min.</string>
    <string name="dummy_text_kcal">128 Kcal</string>
    <string name="profile_login">Login</string>
    <string name="profile_forgot_password">Passwort vergessen?</string>
</resources>