<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.shoppinglist.AddProductToShoppingListFragment">

    <TextView
        android:id="@+id/addnewproducttoshoppinglistlabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:text="@string/addnewproducttoshoppinglistlabel"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_addnewproducttitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="75dp"
        android:autofillHints="@string/product_name"
        android:background="@drawable/input_bg"
        android:hint="@string/product_name"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addnewproducttoshoppinglistlabel" />


    <EditText
        android:id="@+id/edit_text_addnewproductquantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:autofillHints="Menge"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:hint="@string/edittext_addnewproductquantity"
        android:inputType="number"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_addnewproducttitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_addnewproducttitle"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_addnewproducttitle" />

    <Button
        android:id="@+id/button_enteraddproducttoshoppinglist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_bg"
        android:gravity="center"
        android:text="@string/button_addProduct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />



</androidx.constraintlayout.widget.ConstraintLayout>