<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient"
    android:padding="16dp"
    tools:context="ui.inventorylist.AddProductToInventoryFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/addProductToInventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/large_text_margin"
                android:layout_marginEnd="@dimen/large_text_margin"
                android:layout_marginBottom="@dimen/large_text_margin"
                android:gravity="center"
                android:text="@string/add_new_product"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_text_addnewproducttitle_inventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/product_name"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:hint="@string/product_name"
                android:inputType="text"
                android:padding="@dimen/small_text_margin"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addProductToInventory" />

            <RelativeLayout
                android:id="@+id/drop_down_add_new_product_labels_inventory_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_weight=".28"
                android:background="@drawable/drop_down_spinner_background"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/small_text_margin"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_addnewproducttitle_inventory">

                <Spinner
                    android:id="@+id/drop_down_add_new_product_labels_inventory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/medium_text_margin"
                    android:layout_marginEnd="@dimen/medium_text_margin"
                    android:autofillHints="Bitte wähle aus"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:prompt="@string/product_type"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/medium_text_margin"
                    android:layout_marginEnd="@dimen/medium_text_margin"
                    android:contentDescription="@string/choose_producttype"
                    android:gravity="center"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

            </RelativeLayout>

            <EditText
                android:id="@+id/edit_text_addnewproductquantity_inventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/amount"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:hint="@string/amount"
                android:inputType="number"
                android:padding="@dimen/small_text_margin"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drop_down_add_new_product_labels_inventory_container" />

            <EditText
                android:id="@+id/edit_text_add_new_product_expiration_date_inventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/expiration_date"
                android:background="@drawable/input_bg"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:hint="@string/expiration_date"
                android:inputType="date"
                android:padding="@dimen/small_text_margin"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_addnewproductquantity_inventory" />

            <EditText
                android:id="@+id/edit_text_addnewproductManufacturer_inventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/hint_hersteller"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:hint="@string/hint_hersteller"
                android:inputType="text"
                android:padding="@dimen/small_text_margin"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_add_new_product_expiration_date_inventory" />

            <EditText
                android:id="@+id/edit_text_addnewproductNutritionvalue_inventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/nutritionvalues"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:hint="@string/nutritionvalues"
                android:inputType="text"
                android:padding="@dimen/small_text_margin"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_addnewproductManufacturer_inventory" />

            <Button
                android:id="@+id/button_add_image_to_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/super_large_text_margin"
                android:background="@drawable/btn_bg"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/button_add_image_to_product"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_addnewproductNutritionvalue_inventory" />


            <Button
                android:id="@+id/button_scan_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/super_large_text_margin"
                android:background="@drawable/btn_bg"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/scan_product_code"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_addnewproductNutritionvalue_inventory"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/edit_text_addnewproductNutritionvalue_inventory"
                app:layout_constraintTop_toBottomOf="@+id/button_add_image_to_product" />

            <Button
                android:id="@+id/button_enteraddproducttoinventorylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/super_large_text_margin"
                android:background="@drawable/btn_bg"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:text="@string/button_addProduct"
                android:textSize="@dimen/text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_scan_product" />

            <ProgressBar
                android:id="@+id/loadingBarcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/button_enteraddproducttoinventorylist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/edit_text_addnewproductManufacturer_inventory"
                app:layout_constraintTop_toTopOf="@+id/addProductToInventory" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>