<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".LoginActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/app_icon_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/medium_text_margin"
        layout="@layout/app_logo_view"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/medium_text_margin"
        app:layout_constraintVertical_bias="0.13"
        app:layout_constraintTop_toBottomOf="@id/app_icon_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="36sp"
        android:text="@string/login_activity_title"
        android:id="@+id/register_user"/>

    <EditText
        android:id="@+id/email"
        android:background="@drawable/input_bg"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_user"
        app:layout_constraintHorizontal_bias="0.0"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:inputType="textPersonName|textEmailAddress"
        android:hint="E-Mail"
        android:autofillHints="E-Mail"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"/>

    <EditText
        android:id="@+id/password"
        android:background="@drawable/input_bg"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintHorizontal_bias="1.0"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:inputType="textPassword"
        android:hint="Passwort"
        android:autofillHints="Passwort"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/forgotPassword"
        android:background="@drawable/btn_bg"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/password"
        android:text="@string/profile_forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/login"
        android:background="@drawable/btn_bg"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/profile_login"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
        android:layout_marginTop="24dp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:text="Du hast noch keinen Account?"
            android:textSize="13sp"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="Registrieren"
            android:textSize="13sp"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>